refactor : 주문 전체 코드 개선